cmake_minimum_required(
  VERSION 4.3.2
)

project(
  ContextObjects
  VERSION 1.0
  LANGUAGES CXX
)

qt_add_library(
  ${PROJECT_NAME}
  STATIC
)

target_link_libraries(
  ${PROJECT_NAME}
  PRIVATE Qt6::Quick
)

file(
  GLOB
  QML_FILES
  CONFIGURE_DEPENDS
  RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}
  *.qml
)
file(
  GLOB_RECURSE
  RESOURCES
  CONFIGURE_DEPENDS
  RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}
  resources/*
)

qt_add_qml_module(
  ${PROJECT_NAME}
  URI
  ${PROJECT_NAME}
  RESOURCE_PREFIX
  /${PROJECT_NAME}
  OUTPUT_DIRECTORY
  ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}
  QML_FILES
  ${QML_FILES}
  RESOURCES
  ${RESOURCES}
)
